# agents

./: .gitignore  README.md  agent.py  deck_generator.py  demo_presentation.py  html_renderer.py  main.py  parser.py  pyproject.toml  test_dark.html  test_html_rendering.py  test_light.html
tests/: test_deck_generator.py  test_html_renderer.py  test_parser.py
